--- a/projects/index.html
+++ b/projects/index.html
@@ -42,10 +42,17 @@
     <script src="/assets/js/dark_mode.js"></script>
     
     <style>
+      .container_row {
+        display:flex;
+	    }
+
       @media (max-width:500px){
-        .projects img.projects {
+        .container_row img.projects {
           width: 100%; 
           height: auto; 
+        }
+        .container_row {
+          display:block;
         }
       }
     </style>
@@ -136,50 +143,50 @@
   <h2 id="projects">Projects</h2>
   
   <br>
+  <p><strong><a href="https://github.com/archd3sai/Customer-Survival-Analysis-and-Churn-Prediction">Customer Survival Analysis and Churn Prediction</a></strong></p>
   <div class="container_row">
       <img class="project" align="left" width="250" height="150" src="Images/telecom.jpg" style="padding-right: 1em;padding-bottom: 1em;">
 
-      <p><strong><a href="https://github.com/archd3sai/Customer-Survival-Analysis-and-Churn-Prediction">Customer Survival Analysis and Churn Prediction</a></strong></p>
       <div class="text">
         In this project I have used survival analysis to study how the likelihood of the customer churn changes over time. I have also implementd a Random Forest model to predict the customer churn and deployed a model using flask webapp on Heroku. <a href="https://churn-prediction-app.herokuapp.com/">App</a>
       </div>
   </div>
 
   <br>
+  <p><strong><a href="https://github.com/archd3sai/Instacart-Market-Basket-Analysis">Instacart Market Basket Analysis</a></strong></p>
   <div class="container_row">
       <img class="project" align="left" width="250" height="150" src="Images/instacart.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
-      <p><strong><a href="https://github.com/archd3sai/Instacart-Market-Basket-Analysis">Instacart Market Basket Analysis</a></strong></p>
       <div class="text">
         The objective of this project is to analyze the 3 million grocery orders from more than 200,000 Instacart users and predict which previously purchased item will be in user's next order. Customer segmentation and affinity analysis are also done to study user purchase patterns.</p>
       </div>
   </div>
 
   <br>
+  <p><strong><a href="https://github.com/archd3sai/News-Articles-Recommendation">Hybrid-filtering News Articles Recommendation Engine</a></strong></p>
   <div class="container_row">
       <img class="project" align="left" width="250" height="150" src="Images/1_cEaeMuTvINqIgyYQMSJWUA.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
-      <p><strong><a href="https://github.com/archd3sai/News-Articles-Recommendation">Hybrid-filtering News Articles Recommendation Engine</a></strong></p>
       <div class="text">
         A hybrid-filtering personalized news articles recommendation system which can suggest articles from popular news service providers based on reading history of twitter users who share similar interests (Collaborative filtering) and content similarity of the article and user’s tweets (Content-based filtering).</p>
       </div>
   </div>
 
   <br>
+  <p><strong><a href="https://github.com/archd3sai/Predictive-Maintenance-of-Aircraft-Engine">Predictive Maintenance of Aircraft Engine</a></strong></p>
   <div class="container_row">
       <img class="project" align="left" width="250" height="150" src="Images/airplane.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
-      <p><strong><a href="https://github.com/archd3sai/Predictive-Maintenance-of-Aircraft-Engine">Predictive Maintenance of Aircraft Engine</a></strong></p>
       <div class="text">
         In this project I have used models such as RNN, LSTM, 1D-CNN to predict the engine failure 50 cycles ahead of its time, and calculated feature importance from them using sensitivity analysis and shap values. Exponential degradation and similarity-based models are also used to calculate its remaining life.</p>
       </div>
   </div>
 
   <br>
+  <p><strong><a href="https://github.com/archd3sai/Multivariate-Phase-1-Analysis">Multivariate Phase 1 Analysis</a></strong></p>
   <div class="container_row">
       <img class="project" align="left" width="250" height="150" src="Images/phase1.jpg" style="padding-right: 1em;padding-bottom: 1em;">
 
-      <p><strong><a href="https://github.com/archd3sai/Multivariate-Phase-1-Analysis">Multivariate Phase 1 Analysis</a></strong></p>
       <div class="text">
         Objective of this project is to identify the in-control data points and eliminate out of control data points to set up distribution parameters for manufacturing process monitoring. I utilized PCA for dimension reduction and Hotelling T2 and m-CUSUM control charts to established mean and variance matrices.</p>
       </div>
@@ -241,6 +248,7 @@
   <li><a href="https://github.com/archd3sai/SQL">SQL Challenges</a>: This repository contains codes of online SQL challenges (From Hackerrank, Leetcode, Testdome, etc.) solved by me.</li>
   <li><a href="https://github.com/archd3sai/DS-Challenges">Data Science Challenges</a>: This repository contains codes of online Data Science challenges (From Hackerrank, TestDome, etc.) solved by me.</li>
   </ul></li>
+  <br>
   <li><h4 id="ranking-algorithms">Ranking Algorithms</h4>
   <ul>
   <li><a href="https://github.com/archd3sai/Ranking-of-NFL-Teams-using-Markov-method/blob/master/Ranking%20of%20NFL%20teams%20Report.pdf">Ranking of NFL teams using Markov-chain methods</a> : In this project I implemented and compared three stationary distribution of Markov-chain based approaches to rank 32 NFL (National Football League) teams from "Best" to "Worst" using the scores of 2007 NFL regular season.</li>
