--- a/publications/index.html
+++ b/publications/index.html
@@ -120,7 +120,7 @@
   <li>Recipient of Outstanding Master of Engineering - Industrial Engineering Student Award.</li>
   <li>Winner of a TAMU Datathon 2020 among 50+ teams.</li>
   <li>Recipient of TAMU Scholarship and Fee Waiver for excellent academic performance (4.0 GPA).</li>
-  <li>Published total 8 research papers in the domains of machine learning, renewable energy, and Computational Fluid Dynamics.</li>
+  <li>Published 4 research papers in machine learning domain and 4 research papers in Computational Fluid Dynamics domain.</li>
   </ul>
 
   
@@ -200,6 +200,18 @@
   <li><strong>Languages</strong>: Python, R, SQL, C++ </li>
   <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, NLP, Statistics, Explainable AI, Data Structures & Algorithms</li>
   <li><strong>Tools</strong>: Amazon Web Services (S3, Lambda, API Gateway, ECR, ECS, EC2, Cloudwatch, SNS, SQS), Docker, Airflow, Elasticsearch, PostgreSQL, Serverless, Travis CI, Git, Terraform, Flask, MS Excel, Tableau, LangChain</li>
+  </ul>
+
+  <h2 id="publications">Publications</h2>
+  <ul>
+  <li class="mb-2"><b>Desai, A.</b>, Guo, Y., Sheng, S., Sheng, S., Phillips, C., & Williams, L. (2020). Prognosis of Wind Turbine Gearbox Bearing Failures using SCADA and Modeled Data. Annual Conference of the PHM Society, 12(1), 10. <a href="https://phmpapers.org/index.php/phmconf/article/view/1292">[Link]</a></li>
+  <li class="mb-2">Williams, Lindy, <b>Desai, Arch</b>, Guo, Yi, Sheng, Shawn, and Phillips, Caleb. Machine Learning for Gearbox Fault Prediction by Using Both Scada and Modeled Data. United States: N. p., 2021. Web. <a href="https://www.osti.gov/biblio/1769826">[Link]</a></li>
+  <li class="mb-2">Williams, Lindy, Guo, Yi, Sheng, Shawn, and <b>Desai, Arch</b>. Investigation of Multiple Data Streams for Gearbox Bearing Fault Prediction Through Machine-Learning Models. United States: N. p., 2022. Web. <a href="https://www.osti.gov/biblio/1845885">[Link]</a></li>
+  <li class="mb-2">Sheng, Shawn, Keller, Jon, Phillips, Caleb, Guo, Yi, Greco, Aaron, <b>Desai, Arch</b>, and Williams, Lindy. Wind Turbine Drivetrain Reliability Research - Gearbox Bearing Axial Cracking Failure Mode Example. United States: N. p., 2023. Web. <a href="https://www.osti.gov/biblio/1970464">[Link]</a></li>
+  <li class="mb-2"><b>Desai, Arch,</b> Thakkar, Vatsal. Numerical Analysis of Radiative Effects on Natural Convection in Asymmetrically Heated Vertical Convergent ChannelsNumerical Analysis of Radiative Effects on Natural Convection in Asymmetrically Heated Vertical Convergent Channels. IJAERD volume 4 issue 10, pg. no. 734-749 · Oct 1, 2017</li>
+  <li class="mb-2"><b>Desai, Arch,</b> Thakkar, Vatsal. Radiative Effects On Natural Convective Heat Transfer Enhancement In Asymmetrically Heated Vertical Channel Using Horizontal Rectangular FinRadiative Effects On Natural Convective Heat Transfer Enhancement In Asymmetrically Heated Vertical Channel Using Horizontal Rectangular Fin. Proceedings of 3rd national conference on AMPD. 2017.</li>
+  <li class="mb-2">Thakkar, Vatsal, <b>Desai, Arch</b>. Review on Recent Progresses in Heat Transfer Enhancement through the Use of Passive Vortex Generators And Its Applications in Solar Parabolic Trough Systems.Review on Recent Progresses in Heat Transfer Enhancement through the Use of Passive Vortex Generators And Its Applications in Solar Parabolic Trough Systems. IJAERD volume 4 issue 10, pg. no. 696-706 · Oct 1, 2017</li>
+  <li class="mb-2">Thakkar, Vatsal, <b>Desai, Arch</b>. Heat Transfer Enhancement In Corrugated Tubes With Newly Proposed Corrugation ShapesHeat Transfer Enhancement In Corrugated Tubes With Newly Proposed Corrugation Shapes. Proceedings of 3rd national conference on AMPD. 2017. </li>
   </ul>
   
   <h2 id="certificates">Certificates</h2>
